# textureclassification_MULTER_ICIP2019

./: .gitignore  README.md  functions.py  pyproject.toml  runtrain.sh
